frontend/test/should_pass/negative_002.grg
rule r {
	n1:Node -e1:Edge-> n2:Node;

	negative {
		n2-->n3:Node;

		negative {
			n3-->n2;
		}
	}
	negative {
		n2-->n3:Node;
	}

	replace {
	}
}
