frontend/test/should_fail/basic_023.grg
rule r {
  -x:Edge->;
  modify { 
    x:Node;
  }
}
